--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>FreeFlow — Voice to Order</title>
-<link rel="preload" as="image" href="Freeflow-logo.png">
+<link rel="preload" as="image" href="file_000000000e9c62469156924aae2c3ff0.png">
 
 <style>
   :root{
